Obtention de la liste des stades

--- a/QuidditchService/QuidditchService.csproj
+++ b/QuidditchService/QuidditchService.csproj
@@ -73,6 +73,7 @@
     </Compile>
     <Compile Include="SJoueur.cs" />
     <Compile Include="SPersonne.cs" />
+    <Compile Include="SStade.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
