--- a/TestsUnitairesService.cs/TestsUnitairesService.cs.csproj
+++ b/TestsUnitairesService.cs/TestsUnitairesService.cs.csproj
@@ -80,6 +80,8 @@
     <None Include="Properties\DataSources\QuidditchService.SEquipe.datasource" />
     <None Include="Properties\DataSources\QuidditchService.SJoueur.datasource" />
     <None Include="Properties\DataSources\QuidditchService.SMatch.datasource" />
+    <None Include="Properties\DataSources\QuidditchService.SReservation.datasource" />
+    <None Include="Properties\DataSources\QuidditchService.SSpectateur.datasource" />
     <None Include="Properties\DataSources\QuidditchService.SStade.datasource" />
     <None Include="Properties\DataSources\QuidditchService.SUtilisateur.datasource" />
     <None Include="Service References\ServiceReferenceQuidditch\ServiceQuidditch.wsdl" />
